Bug 121394 - CRASH: Opening area dialog ( gtk3 )
Summary: CRASH: Opening area dialog ( gtk3 )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 121405 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2018-11-13 15:13 UTC by Xisco Faulí
Modified: 2018-11-16 06:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-11-13 15:13:54 UTC
Steps to reproduce:
1. Open Writer
2. Go to Insert - Shape - Basic - Rectangle
3. Right click - Area

-> Crash!

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 2c614b4b2537997aece7ba0aa7ecd38e55fcffaa
CPU threads: 8; OS: Mac OS X 10.13.6; UI render: default; VCL: osx; 
Locale: en-US (en_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2018-11-13 15:15:59 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7eb71f84db2f2d9a6e79a42d25bb676cf1018a90

author	Caolán McNamara <caolanm@redhat.com>	2018-11-12 13:31:13 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-11-12 17:29:24 +0100
commit 7eb71f84db2f2d9a6e79a42d25bb676cf1018a90 (patch)
tree d889b3460402badb036c654cec4c166d9be5d2a6
parent c846e85f03b635c88e043166a352a42eeae39304 (diff)
honor getNumDecimalSep for keypad input in native gtk3 dialogs

Bisected with: bibisect-linux64-6.2 

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2018-11-13 21:28:03 UTC
I don't get a crash, but I get some warnings which I imagine are the same root
Comment 3 Caolán McNamara 2018-11-14 09:59:39 UTC
*** Bug 121405 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2018-11-14 12:08:31 UTC
I get the same crash going to Calc - Format - Cell
Comment 5 Commit Notification 2018-11-14 14:39:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7374b8aceba8e7f6a89982844bcdc3a861bf0b49%5E%21

Resolves: tdf#121394 listen to key strokes only if GDK_BUTTON_PRESS_MASK set

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-11-15 12:55:48 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 843fa5ff69f2bc502a6fa35878104d067b2a1e77
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!