Resolves: tdf#121394 listen to key strokes only if GDK_BUTTON_PRESS_MASK set

Change-Id: I5471ed2f4243f79fd0bcb4f65079318c4dd65e26